@@ -1,3 +1,11 @@
+2004-01-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Merge-in console/Makefile.am, hw_init/Makefile.am,
+	startup/Makefile.am, wrapup/Makefile.am. Use automake compilation rules.
+	* console/Makefile.am, hw_init/Makefile.am, startup/Makefile.am,
+	wrapup/Makefile.am: Remove.
+	* configure.ac: Reflect changes above.
+
 2004-01-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Add nostdinc to AUTOMAKE_OPTIONS.
